Hardware/GMS_skx_tma_bindings.f90



module mod_skx_tma_bindings



 !===================================================================================85
 !---------------------------- DESCRIPTION ------------------------------------------85
 !
 !
 !
 !          Module  name:
 !                         'mod_skx_tma_bindings'
 !          
 !          Purpose:
 !                    Fortran bindings Skylake server TMA Metrics (C)
 !                   
 !                     
 !          History:
 !                        Date: 07-06-2020
 !                        Time: 10:02 GMT+2
 !
 !          Version:
 !
 !                      Major: 1
 !                      Minor: 0
 !                      Micro: 0
 !
 !          Author:  Bernard Gingold
 !                 
 !          
 !         
 !          
 !         
 !          E-mail:
 !                  
 !                      beniekg@gmail.com
 !==================================================================================85

 ! Tab:5 col - Type and etc.. definitions
 ! Tab:10,11 col - Type , function and subroutine code blocks.
     use mod_kinds, only : int4
     use, intrinsic :: ISO_C_BINDING
     implicit none
     public
     
    !=====================================================59
    !  File and module information:
    !  version,creation and build date, author,description
    !=====================================================59
    
   
    integer(kind=int4),   parameter :: MOD_SKX_TMA_BINDINGS_MAJOR = 1
    integer(kind=int4),   parameter :: MOD_SKX_TMA_BINDINGS_MINOR = 0
    integer(kind=int4),   parameter :: MOD_SKX_TMA_BINDINGS_MICRO = 0
    integer(kind=int4),   parameter :: MOD_SKX_TMA_BINDINGS_FULLVER =
        1000*MOD_SKX_TMA_BINDINGS_MAJOR+100*MOD_SKX_TMA_BINDINGS_MINOR+ &
                 10*MOD_SKX_TMA_BINDINGS_MICRO
    character(*),         parameter :: MOD_SKX_TMA_BINDINGS_CREATE_DATE = "07-06-2020 10:02 +00200 (SUN 07 JUN 2020 GMT+2)"
    character(*),         parameter :: MOD_SKX_TMA_BINDINGS_BUILD_DATE  = __DATE__ " " __TIME__
    character(*),         parameter :: MOD_SKX_TMA_BINDINGS_AUTHOR      = "Programmer: Bernard Gingold, contact: beniekg@gmail.com"
    character(*),         parameter :: MOD_SKX_TMA_BINDINGS_SYNOPSIS    = "Fortran bindings Skylake server TMA Metrics (C)"

    interface

       function skx_uops_fetched( idq_dsb_uops, &
                                  idq_mite_uops, &
                                  idq_ms_uops) &
                                  bind(c,name="skx_uops_fetched")
               integer(c_size_t) :: idq_dsb_uops
               integer(c_size_t) :: idq_mite_uops
               integer(c_size_t) :: idq_ms_uops
               integer(c_size_t) :: skx_uops_fetched
       end function 

    end interface

    interface

         function skx_recovery_cycles( int_misc_recovery_cycles_any, &
                                       int_misc_recovery_cycles,&
				       is_ht_enabled) &
                                       bind(c,name="skx_recovery_cycles")
                 integer(c_size_t) :: int_misc_recovery_cycles_any
                 integer(c_size_t) :: int_misc_recovery_cycles
                 integer(c_bool)   :: is_ht_enabled
                 real(c_float)     :: skx_recovery_cycles
         end function 
       
    end interface

      
    interface

        function skx_executed_cycles( uops_executed_core_cycles_ge_1,&
                                      is_ht_enabled) &
                                      bind(c,name="skx_executed_cycles")
               integer(c_size_t) :: uops_executed_core_cycles_ge_1
               integer(c_bool)   :: is_ht_enabled
               real(c_float)     :: skx_executed_cycles
        end function skx_executed_cycles
        
    end interface

     
    interface

         function skx_sq_full_cycles( offcore_requests_buffer_sq_full, &
                                      is_ht_enabled) &
                                      bind(c,name="skx_sq_full_cycles")
                integer(c_size_t) :: offcore_requests_buffer_sq_full
                integer(c_bool)   :: is_hit_enabled
                real(c_float)     :: skx_sq_full_cycles
         end function skx_sq_full_cycles
         
        
     end interface

      
     interface

         function skx_cycles_0_ports_utilized(  uops_executed_core_cycles_none, &
                                                exe_activity_exe_bound_0_ports, &
				                is_ht_enabled) &
                                                bind(c,name="skx_cycles_0_ports_utilized")
                integer(c_size_t) ::  uops_executed_core_cycles_none
                integer(c_size_t) ::   exe_activity_exe_bound_0_ports
                integer(c_bool)   :: is_ht_enabled
                real(c_float)     :: skx_cycles_0_ports_utilized
         end function skx_cycles_0_ports_utilized
         

     end interface

      
     interface

           function skx_cycles_1_ports_utilized(  uops_executed_core_cycles_ge_1, &
                                                  uops_executed_core_cycles_ge_2,&
				                  exe_activity_ports_util,&
				                  is_ht_enabled) &
                                                  bind(c,name="skx_cycles_1_ports_utilized")
                   integer(c_size_t) :: uops_executed_core_cycles_ge_1
                   integer(c_size_t) :: uops_executed_core_cycles_ge_2
                   integer(c_size_t) :: exe_activity_ports_util
                   integer(c_bool)   :: is_ht_enabled
                   real(c_float)     :: skx_cycles_1_ports_utilized
           end function skx_cycles_1_ports_utilized
           
         
     end interface


     interface

           function skx_cycles_2_ports_utilized(  uops_executed_core_cycles_ge_2, &
                                                  uops_executed_core_cycles_ge_3,&
				                  exe_activity_ports_util,&
				                  is_ht_enabled) &
                                                  bind(c,name="skx_cycles_2_ports_utilized")
                   integer(c_size_t) :: uops_executed_core_cycles_ge_2
                   integer(c_size_t) :: uops_executed_core_cycles_ge_3
                   integer(c_size_t) :: exe_activity_ports_util
                   integer(c_bool)   :: is_ht_enabled
                   real(c_float)     :: skx_cycles_2_ports_utilized
           end function skx_cycles_2_ports_utilized
           
         
     end interface


     interface

        function skx_cycles_3m_ports_utilized( uops_executed_core_cycles_ge_3, &
                                               is_ht_enabled) &
                                               bind(c,name="skx_cycles_3m_ports_utilized")
                 integer(c_size_t) :: uops_executed_core_cycles_ge_3
                 integer(c_bool)   :: is_ht_enabled
                 real(c_float)     :: skx_cycles_3m_ports_utilized
        end function skx_cycles_3m_ports_utilized
        
        
     end interface

     interface

           function skx_oro_drd_any_cycles( cpu_clk_unhalted_thread, &
                                            offcore_requests_outstanding_cycles_with_data_rd) &
                                            bind(c,name="skx_oro_drd_any_cycles")
                      integer(c_size_t) :: cpu_clk_unhalted_thread
                      integer(c_size_t) :: offcore_requests_outstanding_cycles_with_data_rd
                      integer(c_size_t) :: skx_oro_drd_any_cycles
           end function skx_oro_drd_any_cycles
           
             
  
     end interface

     interface

          function skx_oro_drd_bw_cycles( cpu_clk_unhalted_thread, &
                                           offcore_requests_outstanding_all_data_rd_c4) &
                                           bind(c,name="skx_oro_drd_bw_cycles")
                    integer(c_size_t) :: cpu_clk_unhalted_thread
                    integer(c_size_t) ::  offcore_requests_outstanding_all_data_rd_c4
                    integer(c_size_t) :: skx_oro_drd_bw_cycles
          end function skx_oro_drd_bw_cycles
          

     end interface

     interface

          function skx_oro_demand_rfo_c1(  cpu_clk_unhalted_thread, &
                                         offcore_requests_outstanding_cycles_with_demand_rfo) &
                                         bind(c,name="skx_oro_demand_rfo_c1")
                    integer(c_size_t) :: cpu_clk_unhalted_thread
                    integer(c_size_t) ::  offcore_requests_outstanding_cycles_with_demand_rfo
                    integer(c_size_t) :: skx_oro_demand_rfo_c1
          end function skx_oro_demand_rfo_c1
        
      end interface

       
      interface

         function skx_store_l2_hit_cycles( l2_rqsts_rfo_hit, &
                                           mem_lock_st_fraction) &
                                           bind(c,name="skx_store_l2_hit_cycles")
                  integer(c_size_t) :: l2_rqsts_rfo_hit
                  real(c_float)     :: mem_lock_st_fraction
                  real(c_float)     :: skx_store_l2_hit_cycles
         end function skx_store_l2_hit_cycles
         
         
      end interface

      interface

           function skx_load_l2_hit( mem_load_retired_l2_hit, &
                                     mem_load_retired_fb_hit, &
			             mem_load_retired_l1_miss) &
                                     bind(c,name="skx_load_l2_hit")
                  integer(c_size_t) :: mem_load_retired_l2_hit
                  integer(c_size_t) :: mem_load_retired_fb_hit
                  integer(c_size_t) :: mem_load_retired_l1_miss
                  real(c_float)     :: skx_load_l2_hit
           end function skx_load_l2_hit
           

       end interface

        
       interface

           function skx_load_l3_hit(  mem_load_retired_l3_hit,&
                                      mem_load_retired_fb_hit,&
			              mem_load_retired_l1_miss) &
                                      bind(c,name="skx_load_l3_hit")
                  integer(c_size_t) :: mem_load_retired_l3_hit
                  integer(c_size_t) :: mem_load_retired_fb_hit
                  integer(c_size_t) :: mem_load_retired_l1_miss
                  real(c_float)     :: skx_load_l3_hit
           end function skx_load_l3_hit
           
          
        end interface


        interface

           function skx_load_xsnp_hit( mem_load_l3_hit_retired_xsnp_hit, &
                                       mem_load_l3_hit_retired_xsnp_hitm,&
			               mem_load_retired_fb_hit,&
			               mem_load_retired_l1_miss) &
                                       bind(c,name="skx_load_xsnp_hit")
                 integer(c_size_t) :: mem_load_l3_hit_retired_xsnp_hit
                 integer(c_size_t) :: mem_load_l3_hit_retired_xsnp_hitm
                 integer(c_size_t) :: mem_load_retired_fb_hit
                 integer(c_size_t) :: mem_load_retired_l1_miss
                 real(c_float)     :: skx_load_xsnp_hit
           end function skx_load_xsnp_hit
           
           
        end interface


       interface

             function skx_load_xsnp_hitm( mem_load_l3_hit_retired_xsnp_hitm, &
                                          mem_load_retired_fb_hit,&
			                  mem_load_retired_l1_miss,&
			                  true_xsnp_hit_fraction) &
                                          bind(c,name="skx_load_xsnp_hitm")
                    integer(c_size_t) :: mem_load_l3_hit_retired_xsnp_hitm
                    integer(c_size_t) :: mem_load_retired_fb_hit
                    integer(c_size_t) :: mem_load_retired_l1_miss
                    real(c_float)     :: true_xsnp_hit_fraction
                    real(c_float)     :: skx_load_xsnp_hitm
             end function skx_load_xsnp_hitm
             
          
       end interface

          
       interface
